# zrb-noto

./: .gitignore  README.md  project.sh  pyproject.toml  requirements.txt  template.env  zrb_init.py
.github/workflows/: _zrb.yml
_automate/: _group.py  config.py  fallback.py  main.py
_automate/core/: config.py  start.py
_automate/core/git/: _helper.py  fetch.py  pull.py  push.py
_automate/git/: __init__.py  add.py  commit.py  pull.py  push.py
_automate/git/local/: check.py
_automate/git/server/: check.py
_automate/noto/: __init__.py  _config.py  _env.py  _group.py  lint.py  lint.sh  monitor.py  sync.py  sync.sh
_automate/noto/log/: __init__.py  _group.py  _helper.py  add.py  list_log.py
_automate/noto/todo/: __init__.py  _config.py  _data.py  _helper.py  add.py  complete.py  delete.py  edit.py  find.py  kanban.py  list.py  list_todo.py  start.py  stop.py
_daily/noto/: __init__.py  _env.py  _group.py  _helper.py  lint.py  list.py  monitor.py  sync.py  sync.sh  wiki.py
_daily/noto/log/: __init__.py  _helper.py  add.py  list_log.py
_daily/noto/todo/: __init__.py  _config.py  _data.py  _group.py  _helper.py  add.py  complete.py  delete.py  edit.py  find.py  kanban.py  list.py  start.py  stop.py
src/noto/: __init__.py  _config.py  lint.py  lint.sh  list.py  sync.sh  wiki.py
src/noto/log/: __init__.py  add.py
src/noto/todo/: __init__.py  _group.py  add.py  complete.py  delete.py  edit.py  find.py  start.py  (+1 more)
src/zrb_noto/: __init__.py  _config.py  _env.py  _group.py  _helper.py  _input.py  lint.py  list.py  note.py  sync.py  sync.sh  wiki.py
(+31 files in other folders)
